# lidar_object_detection

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  clean_packages.sh  package.xml
config/: object3d_detector.yaml  object3d_detector_ncfm.rviz  object3d_detector_ncfm.yaml  object3d_detector_offline.yaml
include/: visualization.h
launch/: adaptive_clustering.rviz  ncfm_detector_standalone.launch  ncfm_test_classifer.launch  ncfm_test_detector.launch  object3d_classifier_ncfm.launch  object3d_detector_ncfm.launch  object3d_detector_vel16.launch
script/: convert_HDL64_to_HDL32.py  convert_map2binary.py  data.py  evaluate.py  inference_keras.py  inference_node.py  kitti_util.py  label_grid_map.py  split_train_test.py  tf_model.py  train.py  utility.py
script/keras/: train_mlp.py
script/model_test/: checkpoint  model.ckpt.index
script/ncfm_demo/: config.pkl  model.ckpt.index
script/ncfm_demo2/: config.pkl  model.ckpt.index
script/ncfm_demo_old/: model.ckpt.index
script/parking_lot_demo/: config.pkl  model.ckpt.index
script/saved_models/: checkpoint  config.pkl  model.ckpt.index
script/simulation_demo/: model.ckpt.index
script/warehouse_demo/: config.pkl
src/: adaptive_clustering.cpp  save_detector_data.cpp
